samples/_failures_safe/1761356979_20e411_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81ba106c.c: In function ‘main’:
./samples/SAFE/__tmp_81ba106c.c:183:5: error: expected declaration or statement at end of input
  183 |     int input_type;
      |     ^~~
